--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -33,18 +33,22 @@ apt:
 
 packages:
   - ansible
+  - ansible-lint
   - apt-transport-https
   - bat
   - build-essential
   - ca-certificates
   - cloud-init
   - curl
+  - git
   - gnupg-agent
   - net-tools
   - python3
   - python3-pip
   - software-properties-common
+  - ssh
   - tree
+  - ufw
   - vim
   - wget
 
@@ -133,6 +137,22 @@ write_files:
       *)
           ;;
       esac
+
+  - path: '/home/ubuntu/.bash_aliases'
+    owner: 'ubuntu:ubuntu'
+    permissions: '0644'
+    append: false
+    defer: true
+    content: |
+      # $PATH
+      export PATH="$HOME/.local/bin:$HOME/.cargo/bin:$HOME/.asdf/bin:$HOME/.asdf/shims:$HOME/.linuxbrew/bin:$PATH"
+
+      # set default text editor
+      # * if this fails on ubuntu, try `select-editor`
+      export EDITOR=vim
+
+      # linuxbrew
+      [ -f "/home/linuxbrew/.linuxbrew/bin/brew" ] && eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
 
   - path: '/home/ubuntu/.bash_profile'
     owner: 'ubuntu:ubuntu'
