--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,7 @@
 ---
 collections:
+  - name: ansible.netcommon
+    version: ">=5.0.0"
   - name: ansible.posix
   - name: community.docker
   - name: community.general
