--- a/taskfile.yml
+++ b/taskfile.yml
@@ -27,12 +27,13 @@ tasks:
   install-devbox:
     desc: "Install devbox"
     cmds:
-      - |
-        if ! [[ $(command -v devbox 2>/dev/null) ]]; then
-          curl -fsSL https://get.jetify.com/devbox | bash
-        fi
+      - curl -fsSL https://get.jetify.com/devbox | bash
     run: once
     silent: true
+    env:
+      FORCE: 1
+    status:
+      - command -v devbox 2>/dev/null
 
   install:
     desc: "Install project dependencies"
