fix (cloud-init.yml): ansible locales under nix

--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -133,6 +133,9 @@ write_files:
           ;;
       esac
 
+      export LANG=en_US.UTF-8
+      export LC_ALL=en_US.UTF-8
+
   - path: '/home/ubuntu/.bash_aliases'
     owner: 'ubuntu:ubuntu'
     permissions: '0644'
