--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,9 @@
 [defaults]
+ansible_python_interpreter    = auto_silent
 log_path                      = /var/log/ansible.log
 inventory                     = ./hosts
 roles_path                    = ./roles
+collections_path              = ~/.ansible/collections
 host_key_checking             = False
 retry_files_enabled            = False
 remote_tmp                    = /tmp/${USER}/ansible
