--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -36,16 +36,31 @@ packages:
   - curl
   - git
   - gnupg-agent
+  - libbz2-dev
+  - libffi-dev
+  - liblzma-dev
+  - libncursesw5-dev
+  - libreadline-dev
+  - libsqlite3-dev
+  - libssl-dev
+  - libxml2-dev
+  - libxmlsec1-dev
+  - llvm
+  - lsof
+  - make
   - net-tools
   - python3
   - python3-pip
   - software-properties-common
   - ssh
   - ssh-import-id
+  - tk-dev
   - tree
   - ufw
   - vim
   - wget
+  - xz-utils
+  - zlib1g-dev
 
 users:
   - default
