--- a/config/grafana/provisioning/datasources/datasource.yml
+++ b/config/grafana/provisioning/datasources/datasource.yml
@@ -6,10 +6,18 @@ datasources:
     access: proxy
     url: http://prometheus:9090
     isDefault: true
+    editable: true
+    jsonData:
+      timeInterval: "15s"
+      queryTimeout: "30s"
+      httpMethod: POST
 
   - name: Loki
     type: loki
     access: proxy
     url: http://gateway:3100
     version: 1
-    editable: false
+    editable: true
+    jsonData:
+      maxLines: 1000
+      timeout: 60
