--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -20,16 +20,16 @@ http {
     include /etc/nginx/mime.types;
 
     upstream read {
-        server read:3100;
+        server loki-read:3100;
     }
 
     upstream write {
-        server write:3100;
+        server loki-write:3100;
     }
 
     upstream cluster {
-        server read:3100;
-        server write:3100;
+        server loki-read:3100;
+        server loki-write:3100;
     }
 
     server {
