--- a/config/loki/config.yml
+++ b/config/loki/config.yml
@@ -9,8 +9,15 @@ server:
 
 common:
   path_prefix: /loki
-  compactor_address: http://backend:3100
+  storage:
+    filesystem:
+      chunks_directory: /loki/chunks
+      rules_directory: /loki/rules
   replication_factor: 1
+  ring:
+    kvstore:
+      store: memberlist
+  compactor_address: http://loki-write:3100
 
 storage_config:
   aws:
@@ -22,33 +29,38 @@ storage_config:
     s3forcepathstyle: true
 
 memberlist:
-  join_members: ["read", "write", "backend"]
+  join_members:
+    - loki-read:7946
+    - loki-write:7946
   dead_node_reclaim_time: 30s
   gossip_to_dead_nodes_time: 15s
   left_ingesters_timeout: 30s
-  bind_addr: ['0.0.0.0']
+  bind_addr:
+    - 0.0.0.0
   bind_port: 7946
-  gossip_interval: 2s
 
 ingester:
   lifecycler:
-    join_after: 10s
-    observe_period: 5s
     ring:
-      replication_factor: 1
       kvstore:
         store: memberlist
+      replication_factor: 1
     final_sleep: 0s
-  chunk_idle_period: 1m
+  chunk_idle_period: 1h
+  chunk_retain_period: 30s
   wal:
     enabled: true
     dir: /loki/wal
-  max_chunk_age: 1m
-  chunk_retain_period: 30s
-  chunk_encoding: snappy
-  chunk_target_size: 1.572864e+06
-  chunk_block_size: 262144
-  flush_op_timeout: 10s
+
+frontend:
+  compress_responses: true
+  log_queries_longer_than: 5s
+
+frontend_worker:
+  frontend_address: loki-read:9096
+  grpc_client_config:
+    max_send_msg_size: 104857600
+    max_recv_msg_size: 104857600
 
 schema_config:
   configs:
@@ -60,26 +72,13 @@ schema_config:
         prefix: index_
         period: 24h
 
-ruler:
-  alertmanager_url: http://alertmanager:9093
-  enable_api: true
-  enable_sharding: true
-  wal:
-    dir: /loki/ruler-wal
-  storage:
-    type: local
-    local:
-      directory: /loki/rules
-  rule_path: /loki/rules-temp
-
 limits_config:
   max_cache_freshness_per_query: '10m'
   reject_old_samples: true
   reject_old_samples_max_age: 30m
   ingestion_rate_mb: 10
   ingestion_burst_size_mb: 20
-  split_queries_by_interval: 15m
-  volume_enabled: true
+  max_query_length: 721h
 
 query_range:
   align_queries_with_step: true
@@ -91,16 +90,19 @@ query_range:
         enabled: true
         max_size_mb: 100
 
-frontend:
-  compress_responses: true
-  log_queries_longer_than: 5s
-  max_outstanding_per_tenant: 2048
+ruler:
+  storage:
+    type: local
+    local:
+      directory: /loki/rules
+  ring:
+    kvstore:
+      store: memberlist
 
-query_scheduler:
-  max_outstanding_requests_per_tenant: 1024
-
-querier:
-  query_ingesters_within: 2h
+distributor:
+  ring:
+    kvstore:
+      store: memberlist
 
 analytics:
   reporting_enabled: false
