--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -1,24 +1,26 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
+  scrape_timeout: 10s
 
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: prometheus
     static_configs:
       - targets: ['localhost:9090']
+    metrics_path: /metrics
 
-  - job_name: 'loki'
+  - job_name: vector
+    static_configs:
+      - targets: ['vector:9598']
+    metrics_path: /metrics
+
+  - job_name: loki
     static_configs:
       - targets:
-        - 'read:3100'
-        - 'write:3100'
-        - 'backend:3100'
+        - 'gateway:3100'
+    metrics_path: /metrics
 
-  - job_name: 'vector'
-    static_configs:
-      - targets: ['vector:9090']
-
-  - job_name: 'minio'
+  - job_name: minio
     metrics_path: /minio/v2/metrics/cluster
     scheme: http
     static_configs:
@@ -29,13 +31,14 @@ scrape_configs:
         regex: '([^:]+):\d+'
         replacement: '${1}'
 
-  - job_name: 'minio-health'
-    metrics_path: /minio/health/cluster
-    scheme: http
-    static_configs:
-      - targets: ['minio:9000']
+  - job_name: containers
+    docker_sd_configs:
+      - host: unix:///var/run/docker.sock
+        refresh_interval: 15s
     relabel_configs:
-      - source_labels: [__address__]
-        target_label: instance
-        regex: '([^:]+):\d+'
+      - source_labels: [__meta_docker_container_name]
+        regex: '/(.*)'
+        target_label: container_name
         replacement: '${1}'
+      - source_labels: [__meta_docker_container_label_com_docker_compose_service]
+        target_label: service
